--- a/personal/new/featured_article_zh.html
+++ b/personal/new/featured_article_zh.html
@@ -1,18 +1,122 @@
+<!-- 
+    index.html
+    2023.12.4
+    English, Home page: autobiography/about me 
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>autobiography</title>
+    <!-- use style.css -->
+    <link rel="stylesheet" type="text/css" href="style copy.css">
+    <!-- using bootstrap -->
     <link 
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" 
         rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
         crossorigin="anonymous">
-
+    <!-- Other style -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;600;700&family=IBM+Plex+Serif:ital,wght@0,400;0,700;1,400;1,600;1,700&family=Inter:wght@300;400;600;700&family=Josefin+Slab:ital,wght@0,600;0,700;1,400&family=Noticia+Text:wght@400;700&display=swap" 
+        rel="stylesheet"> 	
+    <style>
+        .bg-lightbrown {
+            background-color: #f5e7cf; /* Use your preferred shade of light brown */
+        }
+    </style>    
 </head>
-<body>
+<body style="padding-top: 56px; " class="bg-danger-subtle text-emphasis-danger px-3">
+    <!-- fixed nav bar on page top-->
+    <nav class="navbar bg-lightbrown fixed-top ">
+        <div class="container-fluid">
+            <!-- Button to call out the off canvas navbar -->
+            <button class="navbar-toggler bg-body-tertiary h5 my-0" type="button" data-bs-toggle="offcanvas" 
+                data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" 
+                aria-label="Toggle navigation">
+                <img src="img/fire.png" alt="Menu" 
+                    width="30" height="24" class="d-inline-block align-text-top">
+                Menu
+            </button>
+            <!-- offcanvas nav body -->
+            <div class="offcanvas offcanvas-start bg-lightbrown h4" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                <div class="offcanvas-header">
+                <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                    <ul class="navbar-nav justify-content-start flex-grow-1 pe-3">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                <img src="img/fire.png" alt="Home" width="30" height="24" class="d-inline-block align-text-top">
+                                Link
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                <img src="img/fire.png" alt="Home" width="30" height="24" class="d-inline-block align-text-top">
+                                Link
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                <img src="img/fire.png" alt="Home" width="30" height="24" class="d-inline-block align-text-top">
+                                Link
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+      </nav>
+    <!-- Page title -->
+    <div class="container text-center mt-4">
+        <div class="row justify-content-center">
+        <div class="col-md-8 col-sm-12">
+            <div class="card bg-body-tertiary">
+                <div class="card-body">
+                    <!-- text -->
+                    <h5 class="card-title">Card title</h5>
+                </div>
+            </div>
+        </div>
+        </div>
+    </div>
 
-    
+    <!-- article title -->
+    <div class="container text-center mt-4 mb-2">
+        <div class="row justify-content-center">
+          <div class="col-md-4 col-sm-6 ">
+            <div class="card bg-body-tertiary ">
+                <div class="card-body bg-danger text-white">
+                    <!-- text -->
+                    <h5 class="card-title">Card title</h5>
+                </div>
+            </div>
+          </div>
+        </div>
+    </div>
+    <!-- article content -->
+    <div class="container text-center mt-3 mb-2 ">
+        <div class="row justify-content-center">
+          <div class="col-md-8 col-sm-12">
+            <div class="card bg-body-tertiary">
+                <div class="card-body">
+                    <!-- text -->
+                    <p class="card-text">
+                        Some quick example text to build on the card title and make up the bulk of the card's content.
+                    </p>
+                </div>
+            </div>
+          </div>
+        </div>
+    </div>
+
+    <!-- background city img -->
+
+    <!-- using bootstrap -->
     <script 
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" 
