--- a/personal/new/index_zh.html
+++ b/personal/new/index_zh.html
@@ -1,15 +1,17 @@
 <!-- 
-    index_zh.html
+    index.html
     2023.12.4
     Chinese, Home page: autobiography/about me 
 -->
 
 <!DOCTYPE html>
-<html lang="zh-TW">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>autobiography</title>
+    <!-- use style.css -->
+    <link rel="stylesheet" type="text/css" href="style copy.css">
     <!-- using bootstrap -->
     <link 
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" 
@@ -20,44 +22,99 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;600;700&family=IBM+Plex+Serif:ital,wght@0,400;0,700;1,400;1,600;1,700&family=Inter:wght@300;400;600;700&family=Josefin+Slab:ital,wght@0,600;0,700;1,400&family=Noticia+Text:wght@400;700&display=swap" 
         rel="stylesheet"> 	
-    
+    <style>
+        .bg-lightbrown {
+            background-color: #f5e7cf; /* Use your preferred shade of light brown */
+        }
+    </style>    
 </head>
-<body>
-    <!-- nav bar -->
-    <div class="container">
-        <ul class="nav flex-column">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Active</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-            </li>
-          </ul>
-          
-        <div class="float-md-start">
-            <img src="img/menu.png" alt="menu">
-
-
-            Float end on viewports sized MD (medium) or wider
+<body style="padding-top: 56px; " class="bg-danger-subtle text-emphasis-danger px-3">
+    <!-- fixed nav bar on page top-->
+    <nav class="navbar bg-lightbrown fixed-top ">
+        <div class="container-fluid">
+            <!-- Button to call out the off canvas navbar -->
+            <button class="navbar-toggler bg-body-tertiary h5 my-0" type="button" data-bs-toggle="offcanvas" 
+                data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" 
+                aria-label="Toggle navigation">
+                <img src="img/fire.png" alt="Menu" 
+                    width="30" height="24" class="d-inline-block align-text-top">
+                導覽列
+            </button>
+            <!-- offcanvas nav body -->
+            <div class="offcanvas offcanvas-start bg-lightbrown h4" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                <div class="offcanvas-header">
+                <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                    <ul class="navbar-nav justify-content-start flex-grow-1 pe-3">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index_zh.html">
+                                <img src="img/fire.png" alt="Home" width="30" height="24" class="d-inline-block align-text-top">
+                                首頁
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="featured_article_zh.html">
+                                <img src="img/fire.png" alt="Home" width="30" height="24" class="d-inline-block align-text-top">
+                                AO3!!
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">
+                                <img src="img/fire.png" alt="Home" width="30" height="24" class="d-inline-block align-text-top">
+                                To EN
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
-        <br>
-        <!-- <nav>
-            <img src="img/menu.png" alt="menu">
-            <a href="index_cn.html" class="current-page"><img src="img/fire.png">首頁</a>
-            <a href="featured_article_cn.html"><img src="img/fire.png">AO3!! </a>
-            <a href="index.html"><img src="img/fire.png">To EN</a>
-        </nav> -->
-    </div>
-    <!-- article -->
-    <!-- article title -->
-    <!-- article content -->
+      </nav>
+    <!-- Page title -->
+    <div class="container text-center mt-4">
+        <div class="row justify-content-center">
+        <div class="col-md-4 col-sm-6 my-0">
+            <div class="card bg-body-tertiary">
+                <div class="card-body">
 
+                    <!-- text -->
+                    <h1>
+                        自我介紹
+                    </h1>
+                </div>
+            </div>
+        </div>
+        </div>
+    </div>
+
+
+    <!-- article content -->
+    <div class="container text-center mt-3 mb-2 ">
+        <div class="row justify-content-center">
+          <div class="col-md-8 col-sm-12">
+            <div class="card bg-body-tertiary">
+                <div class="card-body text-start">
+                    <!-- text -->
+                    <p class="card-text">
+                        大家好，我是Anna，目前大三，就讀國立清華大學外國語文學系。我喜歡閱讀，涉獵的領域五花八門，書單上什麼都有：奇幻、武俠、經濟、心理等都曾名列其中。閒暇時，我也喜歡做手工藝、縫紉和畫畫。
+                    </p>
+                    <p class="card-text">
+                        清大外文以數量眾多且內容豐富的語言學課程著名，我每學期都修好幾堂語言學領域的課，目標是畢業後至google之類的科技公司工作，善用語言學讓人類跟電腦能更順暢的溝通。
+                    </p>
+                    <p class="card-text">
+                        除了人類語言之外，我也需要熟悉程式語言，所以我這學期去選修資工系開設的python程式語言入門。幸好清大選課自由，要修其他系所的課程門檻也很低，我才能修到這堂程式語言入門。 
+                    </p>
+                    <p class="card-text">
+                        之後，我想在科技業工作，並專攻人類語言跟人工智慧，所以熟悉python後，我會開始試著學習如何把程式語言跟人類語言相結合。
+                    </p>
+                </div>
+            </div>
+          </div>
+        </div>
+    </div>
+
+    <!-- background city img -->
 
     <!-- using bootstrap -->
     <script 
