--- a/personal/new/nav-content.html
+++ b/personal/new/nav-content.html
@@ -10,6 +10,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>autobiography</title>
+    <!-- use style.css -->
+    <link rel="stylesheet" type="text/css" href="style copy.css">
     <!-- using bootstrap -->
     <link 
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" 
@@ -101,7 +103,7 @@
         <div class="row justify-content-center">
           <div class="col-md-8 col-sm-12">
             <div class="card bg-body-tertiary">
-                <div class="card-body">
+                <div class="card-body text-start fs-5">
                     <!-- text -->
                     <p class="card-text">
                         Some quick example text to build on the card title and make up the bulk of the card's content.
@@ -112,6 +114,7 @@
         </div>
     </div>
 
+    <!-- background city img -->
 
     <!-- using bootstrap -->
     <script 
