organize bootstrap practice page
add nave bar
move into the same folder(bootstrap practice)
add more descriptive name(card and grid.html)

--- a/personal/new/featured_article_en.html
+++ b/personal/new/featured_article_en.html
@@ -113,6 +113,34 @@
                     <p>
                         Archive of Our Own (AO3) is a website where people share their works with others. It is basically a repository hosting more than 7 million works that comes with a well-designed filter/search system. There are different types of work on AO3, including stories, drawings, and audiobooks.
                     </p>
+
+                    <!-- contain side image -->
+                    <!-- Button trigger modal -->
+                    <button type="button" class="btn bg-lightbrown" data-bs-toggle="modal" data-bs-target="#exampleModalCenter">
+                        <img src="img/fire.png" width="30" height="24" class="d-inline-block align-text-top">
+                        See AO3 Logo
+                    </button>
+                    <!-- Modal -->
+                    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLongTitle">AO3 Logo</h5>
+                            <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                            </div>
+                            <div class="modal-body">
+                                <img src="img/ao3_logo.png" alt="Archive of Our Own logo"/>
+
+                            </div>
+                            <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            </div>
+                        </div>
+                        </div>
+                    </div>
+
                     <p>
                         AO3 was first created to provide a place where fans could put their fanworks. People that are fans of a particular book, movie, group, or videogame form their own circle known as a fandom. The fictions and stories created by these fans are called fanfics (aka fics), the arts are fanart, and the audiobooks based on a fanfic are called podfics. Most of the works on AO3 are fanworks, but there are also original works up there.
                     </p>
@@ -157,6 +185,32 @@
                     <p>
                         If you already know the title of a work or the name of an author you are looking for, the fastest way to find it is to feed the information to google and add the keyword “ao3”. However, when searching for new works in AO3, I highly recommend using the built-in search system. AO3 has an amazing tagging system that comes with a powerful sort and filter function. There are tags for everything: name of the fandom a work belongs to, the rating of the work, warnings, characters that appear in it, the relationship of those characters, the worldview of the work, and anything the artist wants to include. 
                     </p>
+                    
+                    <!-- contain side image -->
+                    <!-- Button trigger modal -->
+                    <button type="button" class="btn bg-lightbrown" data-bs-toggle="modal" data-bs-target="#exampleModalCenter">
+                        <img src="img/fire.png" width="30" height="24" class="d-inline-block align-text-top">
+                        See Tag filter column
+                    </button>
+                    <!-- Modal -->
+                    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLongTitle">Tag filter column</h5>
+                            <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                            </div>
+                            <div class="modal-body">
+                                <img src="img/start_filter_en.jpg" alt="Archive of Our Own logo"/>
+                            </div>
+                            <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            </div>
+                        </div>
+                        </div>
+                    </div>
                     <p>
                         I recommend checking “warnings” and excluding anything you do not like, this could decrease the chance of encountering works that contain contents you wish to avoid. Altering the setting of “fandoms”, “categories”, and “additional tags” will also help narrow down your search. The “M” and “F” in “categories” represent male and female respectively. Categories let users choose what kinds of romantic and/or sexual relationships they wish to look for in a work.
                     </p>
