--- a/personal/bootstrap practice/card and grid.html
+++ b/personal/bootstrap practice/card and grid.html
@@ -9,7 +9,12 @@
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" 
         rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
         crossorigin="anonymous">
-    <!-- <style>
+      <style>
+          .nav-link {
+              color: white;
+          }
+      </style>
+        <!-- <style>
         [class*="col"]{
             padding: 1rem;
             background-color: #33b5e5;
@@ -19,6 +24,25 @@
     </style> -->
 </head>
 <body>
+    <!-- Nav bar -->
+    <ul class="nav mt-0 text-white bg-dark pt-3 pb-2 mb-2">
+      <li class="nav-item">
+        <h2 class="mx-3">Nav</h2>
+        </li>
+      <li class="nav-item">
+        <a class="nav-link" href="index.html">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="card and grid.html">Card & Grid</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="typography.html">Typography</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#">Disabled</a>
+      </li>
+    </ul>
+
     <div class="container my-5">
         <div class="row my-5">
             <div class="col-3">
