--- a/personal/bootstrap practice/index.html
+++ b/personal/bootstrap practice/index.html
@@ -8,15 +8,49 @@
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" 
         rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
         crossorigin="anonymous">
-
+        <!-- Custom CSS to remove top margin from the navbar -->
+        <style>
+            .nav-link {
+                color: white;
+            }
+        </style>
 </head>
 <body>
-    <div class="h1">Hello Bootstrap 
-        <div class="p my-5">
-            this is a basic template
+    <div class="row">
+        <div class="col-sm-3">
+            <div class="container mt-0 text-white bg-dark pt-3">
+                <h2 class="ms-3">Nav</h2>
+                <ul class="nav flex-column">
+                  <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="card and grid.html">Card & Grid</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="typography.html">Typography</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled" href="#">Disabled</a>
+                  </li>
+                </ul>
+            </div>
         </div>
+        <div class="col-sm-9">
+            <div class="h1 pt-3">Hello Bootstrap 
 
-    </div>
+                <div class="p my-5">
+                    this is a basic template
+                </div>
+        
+            </div>
+        </div>
+        
+
+      </div>
+
+
+
     <script 
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" 
