--- a/personal/new/test2.html
+++ b/personal/new/test2.html
@@ -1,11 +1,6 @@
-<!-- 
-    index.html
-    2023.12.4
-    English, Home page: autobiography/about me 
--->
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,65 +14,88 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;600;700&family=IBM+Plex+Serif:ital,wght@0,400;0,700;1,400;1,600;1,700&family=Inter:wght@300;400;600;700&family=Josefin+Slab:ital,wght@0,600;0,700;1,400&family=Noticia+Text:wght@400;700&display=swap" 
-        rel="stylesheet"> 	
-    
+        rel="stylesheet"> 
+    <style>
+        .bg-lightbrown {
+            background-color: #f5e7cf; /* Use your preferred shade of light brown */
+        }
+        nav a {
+            text-decoration: none;
+        }
+
+        a>img {
+            width: 2vw;
+            vertical-align: middle;
+            padding: 0 4% 1% 0;
+        }
+
+    </style>
+
 </head>
-<body>
-    <!-- nav bar -->
-    <!-- nav bar -->
-    <nav class="navbar bg-body-tertiary fixed-top">
-        <div class="container-fluid">
-        <a class="navbar-brand" href="#">Offcanvas navbar</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-            <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+
+<body class="bg-lightbrown">
+    <div class="container-fluid bg-light">
+        <div class="row">
+
+            <!-- the nav back ground picture in a card -->
+            <div class="col-lg-2 d-none d-lg-block mt-4">
+                <div class="card img-fluid">
+                    <img class="card-img-top px-0" src="img/menu.png" alt="Card image" style="width:90%">
+<!-- where all the links are -->
+<div class="card-img-overlay px-0 py-0 bg-lightbrown" style="left: 25%; top:15%; bottom: 20%;">
+    <div class="container" style="height: 100%;"> <!-- Set the height to 100% -->
+        <!-- 1st link -->
+        <div class="row align-items-center mb-3">
+            <a href="featured_article_en.html" class="d-flex p-0" style="text-decoration: none;">
+                <div class="col-sm-4 bg-dark d-flex align-items-center justify-content-center">
+                    <img src="img/fire.png" style="width: 2.5vw;margin-top: 5px;margin-bottom: 5px;">
+                </div>
+                <div class="col-sm-8 bg-primary text-white d-flex align-items-center ">
+                    Home
+                </div>
+            </a>
+        </div>
+
+        <!-- 2nd link -->
+        <div class="row align-items-center mb-3">
+            <a href="featured_article_en.html" class="d-flex p-0" style="text-decoration: none;">
+                <div class="col-sm-4 bg-dark d-flex align-items-center justify-content-center">
+                    <img src="img/fire.png" style="width: 2.5vw;margin-top: 5px;margin-bottom: 5px;">
+                </div>
+                <div class="col-sm-8 bg-primary text-white d-flex align-items-center ">
+                    Home
+                </div>
+            </a>
+        </div>
+
+        <!-- 3rd link -->
+        <div class="row align-items-center mb-3">
+            <a href="featured_article_en.html" class="d-flex p-0" style="text-decoration: none;">
+                <div class="col-sm-4 bg-dark d-flex align-items-center justify-content-center">
+                    <img src="img/fire.png" style="width: 2.5vw;margin-top: 5px;margin-bottom: 5px;">
+                </div>
+                <div class="col-sm-8 bg-primary text-white d-flex align-items-center ">
+                    Home
+                </div>
+            </a>
+        </div>
+    </div>
+</div>
+
+                </div>
             </div>
-            <div class="offcanvas-body">
-            <!-- Remove the 'flex-grow-1' class -->
-            <ul class="navbar-nav justify-content-start pe-3">
-                <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Dropdown
-                </a>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                    <li>
-                    <hr class="dropdown-divider">
-                    </li>
-                    <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-                </li>
-            </ul>
-            <form class="d-flex mt-3" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
+            <!-- the articles -->
+            <div class="col-lg-8 col-md-9 col-sm-11 bg-dark text-white mx-auto mx-lg-0">
+                <h1>
+                    is test2.html  
+                 
+                </h1>
             </div>
         </div>
-        </div>
-    </nav>
-  
-    <!-- article -->
-    <!-- article title -->
-    <!-- article content -->
 
-
-    <!-- using bootstrap -->
-    <script 
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" 
-        crossorigin="anonymous">
-    </script>
+        <h1>My First Bootstrap Page</h1>
+        <p>This is some text.</p>
+    </div>
 </body>
+
 </html>
