add side img for section 2
side img(only show on lg screen): filter column
side by side in section img (archive warning and category tags)

--- a/personal/new/old and new/index.html
+++ b/personal/new/old and new/index.html
@@ -26,7 +26,7 @@
         
     </style>    
 </head>
-<body class="bg-home-page" style="padding-top: 56px; ">
+<body>
 
     <!-- fixed nav bar on page top-->
     <nav class="navbar fixed-top nav-fixed-bar-bg hide-on-lg">
